# meltano-aws-ssm-state-backend

./: README.md  pyproject.toml
meltano_state_ssm_plugin/: ssm.py
