[tool.poetry]
name = "meltano-state-ssm-plugin"
description = "A Meltano State Backend for AWS SSM"
version = "0.0.1"
authors = ["Mark Johnston <mj2.squ@gmail.com>"]

[tool.poetry.dependencies]
boto3 = {version = "^1.28.84"}
meltano = { git = "https://github.com/meltano/meltano.git", branch = "state-backend-plugins" }

[build-system]
requires = ["poetry-core==1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."meltano.state_backends"]
"ssm-parameter" = "meltano_ssm_parameter_state_backend.ssm:SSMStateStoreManager"
